All the fixes
Checkout buttons to uppercase
Mobile / tablet pagination added
Qty buttons in minibag now grey
Implemented new scroll lock & custom scrollbars
Focus search bar on display
Re-did JS touch events
250ms delay on nav and minibag hovers
Off canvas viewport vertical resize catcher
Correct (ie. none) prefix for autocolumns
Removed input styling on IOS
Off canvas chevron now in square container
Hide search bar icon & placeholder on focus
Removed highlight on icon hover

--- a/src/scss/20-tools/_mixins.scss
+++ b/src/scss/20-tools/_mixins.scss
@@ -66,7 +66,7 @@
 }
 
 @mixin auto-columns($number) {
-  -webkit-columns: $number 12em;
+  columns: $number 12em;
 }
 
 @for $i from 2 through 6 {
