--- a/src/scss/90-trumps/_developer.scss
+++ b/src/scss/90-trumps/_developer.scss
@@ -140,9 +140,6 @@
     display: inline-block;
     color: $cool-grey;
   }
-  &:hover:before {
-    color: $primary-color;
-  }
 }
 
 .block-icon {
