--- a/src/scss/90-trumps/_utility-ui-helpers.scss
+++ b/src/scss/90-trumps/_utility-ui-helpers.scss
@@ -2,6 +2,7 @@
 
   &::-webkit-scrollbar{
     width: 5px;
+    background-color: $light-grey;
   }
 
   &::-webkit-scrollbar-thumb{
